# nand2tetris-verilog-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
hardware/: CMakeLists.txt
hardware/bin-rs/: Cargo.toml  build.rs
hardware/bin-rs/src/: ffi.rs  lib.rs  main.rs
hardware/bin-rs/src/vpi_c/: mod.rs
hardware/bin-rs/tests/: and_test.rs  nand.rs  nand_test.rs  not_test.rs  or_test.rs
hardware/bin-rs/tests/utils/: mod.rs
hardware/boolean_gate/: Cargo.toml  build.rs  nand.v  wrapper.hpp
hardware/boolean_gate/c/: nand.cpp
hardware/boolean_gate/src/: main.rs
hardware/boolean_gate/verilog/: counter_4bit.v
hardware/cpp/: NAND.cpp  top.cpp  top.h
hardware/icarus-verilog-testbench/: Cargo.toml
hardware/icarus-verilog-testbench/src/: lib.rs
hardware/lib-rs/: CMakeLists.txt  Cargo.toml
hardware/rust/: Cargo.toml  build.rs
hardware/rust/src/: lib.rs
hardware/verilog/: top.sv
hardware/verilog/boolean_gate/: and.sv  nand.sv  not.sv  or.sv
nand2tetris/: README.md
