[package]
name = "bin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[dev-dependencies]
icarus-verilog-testbench = { path = "../icarus-verilog-testbench" }

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
